<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#ffffff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/bg_anhnen1"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/dp10"
                        android:paddingLeft="@dimen/dp16"
                        android:paddingRight="@dimen/dp16"
                        android:paddingTop="@dimen/dp10">

                        <ImageView
                            android:id="@+id/imageView15"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_centerInParent="true"
                            android:tint="#333"
                            app:srcCompat="@drawable/icon_phone" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="#333"
                            android:textSize="16sp" />

                    </RelativeLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/re_Cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/dp10"
                    android:paddingLeft="@dimen/dp10"
                    android:paddingRight="@dimen/dp10"
                    android:paddingTop="@dimen/dp10"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cancel"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#b2b2b2">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_home_now"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView10"
                        android:layout_width="55dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="@dimen/dp16"
                        android:paddingRight="@dimen/dp16"
                        android:tint="#ff0000"
                        app:srcCompat="@drawable/i_home" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="@dimen/dp16"
                        android:paddingRight="@dimen/dp16"
                        android:text="@string/home"
                        android:textColor="#3c3c3c"
                        android:textSize="14sp" />
                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp18"
                android:layout_marginRight="@dimen/dp18"
                android:background="#f0f0f0"></RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_share"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/dp8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView13"
                        android:layout_width="55dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="@dimen/dp16"
                        android:paddingRight="@dimen/dp16"
                        android:tint="#ff0000"
                        app:srcCompat="@drawable/i_share" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:paddingLeft="@dimen/dp16"
                        android:paddingRight="@dimen/dp16"
                        android:text="@string/share"
                        android:textColor="#3c3c3c"
                        android:textSize="14sp" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_Cancel11"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:visibility="gone">
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>