<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Main_ThongTin_ChiTiet_DanhBa">

    <LinearLayout
        android:id="@+id/re_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#dd121212"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/re_back"
            android:layout_width="60dp"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="@dimen/dp12"
                android:tint="#fff"
                app:srcCompat="@drawable/icon_back" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/image_representative"
                android:textColor="#fff"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/re_done"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="@dimen/dp6"
                android:tint="#fff"
                app:srcCompat="@drawable/icon_shorcute" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/re_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/re_top">

        <ImageView
            android:id="@+id/image_Viewshow"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bg_anhnen2" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_anhdaidien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/re_image"
        android:layout_alignParentStart="true"
        android:paddingLeft="@dimen/dp16"
        android:paddingRight="@dimen/dp16"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="@dimen/dp14">

            <!--<ImageView-->
            <!--android:id="@+id/imageView6"-->
            <!--android:layout_width="120dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:layout_alignParentStart="true"-->
            <!--android:layout_alignParentTop="true"-->
            <!--app:srcCompat="@drawable/i_user" />-->

            <!--<de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"-->
            <!--android:id="@+id/image_Viewshow"-->
            <!--android:layout_width="120dp"-->
            <!--android:layout_height="120dp"-->
            <!--android:src="@drawable/image"-->
            <!--app:civ_border_color="#a6a6a6"-->
            <!--app:civ_border_width="1dp" />-->

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_danhba"
                android:tint="#fff" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/re_image">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/re_n1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#bebebe">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re_n1"
                android:padding="@dimen/dp10">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="serif"
                    android:text="Nam danh bạ"
                    android:textColor="#F50600BC"
                    android:textSize="22sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/re_n2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/re_name"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginRight="@dimen/dp8"
                android:background="#bebebe">

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/re_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re_n2"
                android:orientation="horizontal"
                android:padding="@dimen/dp10">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_numberphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif"
                        android:text="0909 849 824"
                        android:textColor="#FF444445"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tv_name_sim"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Mobile"
                        android:textColor="#cbcbcb"
                        android:textSize="15sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:padding="@dimen/dp8"
                        app:srcCompat="@drawable/icon_sms" />
                </RelativeLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/re_n3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/re_phone"
                android:layout_marginLeft="@dimen/dp8"
                android:layout_marginRight="@dimen/dp8"
                android:background="#bebebe">

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/re_n3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/re_sms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="@dimen/dp8"
                            app:srcCompat="@drawable/icon_sms" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@+id/imageView8"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:padding="@dimen/dp8"
                            android:text="@string/send_SMS"
                            android:textColor="#999"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="1"
                        android:background="#bebebe">

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/re_call"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView11"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="@dimen/dp8"
                            app:srcCompat="@drawable/icon_phone" />

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@+id/imageView11"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:padding="@dimen/dp8"
                            android:text="@string/direct_call"
                            android:textColor="#999"
                            android:textSize="16sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="1"
                        android:background="#bebebe">

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/re_action1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="@dimen/dp8"
                            app:srcCompat="@drawable/icon_whatapp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@+id/imageView9"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:padding="@dimen/dp8"
                            android:text="WhatsApp"
                            android:textColor="#999"
                            android:textSize="16sp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="60dp"
                        android:layout_weight="1"
                        android:background="#bebebe">

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/re_action2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:padding="@dimen/dp8"
                            app:srcCompat="@drawable/telegram" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_toRightOf="@+id/imageView10"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif"
                            android:padding="@dimen/dp8"
                            android:text="Telegram"
                            android:textColor="#999"
                            android:textSize="16sp" />

                    </RelativeLayout>

                </LinearLayout>
            </ScrollView>


        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/re_camera1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/re_image"
        android:padding="@dimen/dp10">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_camera"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/icon_camera" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/dp4">

            <TextView
                android:id="@+id/tv_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:text="Email : "
                android:textColor="#222121"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_Address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Address : "
                android:textColor="#cbcbcb"
                android:textSize="15sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>